tests/paczka1/fuzzy1/98359068.err
Error in line 6: vIN5Qd S508 50,2
Error in line 10: Y3pVGak A464 76,6
Error in line 5: bUvNxCMpOw A464 63,6
Error in line 17: vIN5Qd A464 31,[
Error in line 18: vIN5Qd A464 5,1
Error in line 23: Y3pVGak S603 87,3
Error in line 24: vIN5Qd S603 33,6
Error in line 31: vIN5Qd A464 60,3
Error in line 7: BaiZGq A941 32,8
